	  netdev_foreach().  Logic in ifconfig, ifup, and ifown now use the
	  procfs file system to examine networking status.  (2015-11-27).
	* apps/nshlib:  Add a new NSH losmart command.  losmart setups up
	  a loop device for the smart MTD driver similar to losetup but
	  with different syntax.  From Ken Pettit (2015-11-28).
	* apps/nshlib:  The I/O buffer, g_iobuffer, should not be a global
	  buffer.  That will not work in an environment where there are multiple
	  NSH sessions.  The I/O buffer must, instead, be a part part of the
	  session-specific data defined in nsh_console.h (2015-11-28).
	* apps/nshlib:  The 'ps' command now uses /proc/<pid>/ to obtain
	  task status information.  A consequence of this is that you cannot use
	  the 'ps' command if the procfs is not enabled and mounted at
	  /proc (2015-11-28).

7.14 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* netutils/telnetd:  Move the Telnet driver from netutils/telnetd to
	  nuttx/drivers/net.  It is a driver an belongs in the OS.  There are
	  still some partitioning issues with the interface to the Telnet
	  driver (2015-12-07).
	* netutils/telnetd:  No longer calls OS interfade telnet_driver.  Now
	  creates Telnet sessions by open a new factory device at /dev/telnet
	  and then using ioctl calls to create the session character drivers
	  at /dev/telnetN (2015-12-07).
	* netutils/ping: Unfinished implementation of ping/ping6 using raw
	  sockets (2015-12-11).
	* examples/module:  Add a test harness for verifying NuttX kernel
	  modules (2015-12-12).
	* apps/nshlib:  Add module commands: insmod, rmmod, and lsmod
	  (2015-12-13).
	* apps/examples/pca9635:  Add a simple test of PCA9635PW PWM LED
	  driver.  From Alan Carvalho de Assis (2015-12-15).
	* apps/examples/ostest:  Add a test of POSIX timers using
	  SIGEV_THREAD (20156-12-30).
	* apps/nshlib:  Add a 'time' command that may be used to time the
	  execution of other commands (2015-12-31).