@@ -48,6 +48,7 @@ CSRCS += netlib_setifstatus.c netlib_getifstatus.c
 ifeq ($(CONFIG_NET_IPv4),y)
 CSRCS += netlib_setipv4addr.c netlib_getipv4addr.c
 CSRCS += netlib_setdripv4addr.c netlib_setipv4netmask.c
+CSRCS += netlib_getdripv4addr.c netlib_getipv4netmask.c
 ifeq ($(CONFIG_NETDB_DNSCLIENT),y)
 CSRCS += netlib_setipv4dnsaddr.c netlib_getipv4dnsaddr.c
 endif
